--- a/redis.conf
+++ b/redis.conf
@@ -1,13 +1,13 @@
 # Redis configuration for ETL Plus Backend
 # Basic settings
-bind 0.0.0.0
+bind 127.0.0.1 ::1
 port 6379
 timeout 0
 tcp-keepalive 300
 
 # Memory management
 maxmemory 256mb
-maxmemory-policy allkeys-lru
+maxmemory-policy allkeys-lfu
 
 # Persistence
 save 900 1
@@ -19,7 +19,8 @@ loglevel notice
 logfile ""
 
 # Security
-protected-mode no
+protected-mode yes
+requirepass ${REDIS_PASSWORD}
 
 # Performance
 tcp-backlog 511
