--- a/redis.conf
+++ b/redis.conf
@@ -1,6 +1,6 @@
 # Redis configuration for ETL Plus Backend
 # Basic settings
-bind 127.0.0.1 ::1
+bind 0.0.0.0
 port 6379
 timeout 0
 tcp-keepalive 300
@@ -26,7 +26,5 @@ requirepass ${REDIS_PASSWORD}
 tcp-backlog 511
 databases 16
 
-# Disable dangerous commands in production
-rename-command FLUSHDB ""
-rename-command FLUSHALL ""
-rename-command SHUTDOWN SHUTDOWN_REDIS
+# Security
+# requirepass will be set by entrypoint script
