Refactor and enhance performance benchmarks
- Updated SQL query in CacheManager to use explicit type casting for safe integer binding.
- Improved connection acquisition logic in DatabaseConnectionPool to handle concurrent access more robustly.
- Enhanced log file rotation logic in LogAggregator to ensure accurate size calculations by flushing buffered data.
- Added structured logging configuration validation in main application entry point.
- Fixed atomic operation throughput calculations in concurrency benchmarks to prevent division by zero.
- Optimized load test benchmarks by utilizing thread-local random number generators for operation type selection.
- Improved memory usage reporting in performance benchmarks to use platform-specific APIs for accuracy.
- Removed redundant performance test runner class and integrated its functionality directly into the main test execution flow.
- Enhanced WebSocket benchmark to calculate average latency more accurately using accumulate.
- Updated unit tests for LogHandler to return a copy of log entries for thread safety.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,20 +23,19 @@ services:
   redis:
     image: redis:7-alpine
     container_name: etl_redis
+    ports:
+      - "6379:6379"
+    command: ["sh", "-c", "redis-server --requirepass \"$$(cat /run/secrets/redis_password)\""]
     volumes:
       - redis_data:/data
-      - ./redis.conf:/etc/redis/redis.conf:ro
-      - ./redis-entrypoint.sh:/usr/local/bin/redis-entrypoint.sh:ro
-      - redis_password:/run/secrets/redis_password:ro
-    entrypoint: ["/usr/local/bin/redis-entrypoint.sh"]
-    restart: unless-stopped
     secrets:
       - redis_password
+    restart: unless-stopped
     healthcheck:
-      test: ["CMD", "redis-cli", "-a", "/run/secrets/redis_password", "ping"]
+      test: ["CMD", "sh", "-c", "redis-cli -a \"$$(cat /run/secrets/redis_password)\" ping"]
       interval: 10s
-      timeout: 3s
-      retries: 3
+      timeout: 5s
+      retries: 5
 
   etlplus-backend:
     build:
@@ -56,11 +55,13 @@ services:
       - DATABASE_TYPE=postgresql
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - REDIS_PASSWORD_FILE=/run/secrets/redis_password
       - JWT_SECRET=development-jwt-secret-key-for-local-testing
     volumes:
       - ./logs:/app/logs
       - ./config:/app/config:ro
+    secrets:
+      - redis_password
     depends_on:
       postgres:
         condition: service_healthy
