--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -439,68 +439,68 @@ macro(create_test_executable target_name script_file)
 endmacro()
 
 # Create all test executables using the shared library
-create_test_executable(test_websocket_basic scripts/test_websocket_basic.cpp)
-create_test_executable(test_websocket_integration scripts/test_websocket_integration.cpp)
-create_test_executable(test_websocket_manager_enhanced scripts/test_websocket_manager_enhanced.cpp)
-create_test_executable(test_websocket_filtering_demo scripts/test_websocket_filtering_demo.cpp)
-create_test_executable(test_websocket_filtering_unit scripts/test_websocket_filtering_unit.cpp)
-create_test_executable(test_websocket_error_handling scripts/test_websocket_error_handling.cpp)
-create_test_executable(test_job_monitoring_models scripts/test_job_monitoring_models.cpp)
-create_test_executable(test_etl_job_manager_monitoring scripts/test_etl_job_manager_monitoring.cpp)
+create_test_executable(test_websocket_basic tests/unit/test_websocket_basic.cpp)
+create_test_executable(test_websocket_integration tests/unit/test_websocket_integration.cpp)
+create_test_executable(test_websocket_manager_enhanced tests/unit/test_websocket_manager_enhanced.cpp)
+create_test_executable(test_websocket_filtering_demo tests/unit/test_websocket_filtering_demo.cpp)
+create_test_executable(test_websocket_filtering_unit tests/unit/test_websocket_filtering_unit.cpp)
+create_test_executable(test_websocket_error_handling tests/unit/test_websocket_error_handling.cpp)
+create_test_executable(test_job_monitoring_models tests/unit/test_job_monitoring_models.cpp)
+create_test_executable(test_etl_job_manager_monitoring tests/unit/test_etl_job_manager_monitoring.cpp)
 if(ENABLE_TESTS)
-  create_test_executable(test_cache_warmup scripts/test_cache_warmup.cpp)
-  create_test_executable(test_optional_ttl scripts/test_optional_ttl.cpp)
+  create_test_executable(test_cache_warmup tests/unit/test_cache_warmup.cpp)
+  create_test_executable(test_optional_ttl tests/unit/test_optional_ttl.cpp)
 endif()
-create_test_executable(test_job_monitor_service scripts/test_job_monitor_service.cpp)
-create_test_executable(test_job_monitor_service_simple scripts/test_job_monitor_service_simple.cpp)
-create_test_executable(test_job_monitor_service_error_handling scripts/test_job_monitor_service_error_handling.cpp)
-create_test_executable(test_log_streaming_simple scripts/test_log_streaming_simple.cpp)
-create_test_executable(test_log_streaming_integration scripts/test_log_streaming_integration.cpp)
-create_test_executable(test_log_streaming_demo scripts/test_log_streaming_demo.cpp)
-create_test_executable(test_enhanced_rest_endpoints_simple scripts/test_enhanced_rest_endpoints_simple.cpp)
-create_test_executable(hana_exception_demo scripts/hana_exception_demo.cpp)
-create_test_executable(test_config_management_demo scripts/test_config_management_demo.cpp)
-create_test_executable(test_config_simple scripts/test_config_simple.cpp)
-create_test_executable(test_server_config_and_metrics scripts/test_server_config_and_metrics.cpp)
-create_test_executable(test_pooled_session scripts/test_pooled_session.cpp)
-create_test_executable(test_pooled_session_integration scripts/test_pooled_session_integration.cpp)
-create_test_executable(demo_request_validator scripts/demo_request_validator.cpp)
-create_test_executable(demo_response_builder_simple scripts/demo_response_builder_simple.cpp)
-create_test_executable(demo_exception_mapper_integration scripts/demo_exception_mapper_integration.cpp)
-create_test_executable(test_exception_mapper scripts/test_exception_mapper.cpp)
-create_test_executable(test_request_handler_refactored scripts/test_request_handler_refactored.cpp)
+create_test_executable(test_job_monitor_service tests/unit/test_job_monitor_service.cpp)
+create_test_executable(test_job_monitor_service_simple tests/unit/test_job_monitor_service_simple.cpp)
+create_test_executable(test_job_monitor_service_error_handling tests/unit/test_job_monitor_service_error_handling.cpp)
+create_test_executable(test_log_streaming_simple tests/unit/test_log_streaming_simple.cpp)
+create_test_executable(test_log_streaming_integration tests/unit/test_log_streaming_integration.cpp)
+create_test_executable(test_log_streaming_demo tests/unit/test_log_streaming_demo.cpp)
+create_test_executable(test_enhanced_rest_endpoints_simple tests/unit/test_enhanced_rest_endpoints_simple.cpp)
+create_test_executable(hana_exception_demo demos/hana_exception_demo.cpp)
+create_test_executable(test_config_management_demo tests/unit/test_config_management_demo.cpp)
+create_test_executable(test_config_simple tests/unit/test_config_simple.cpp)
+create_test_executable(test_server_config_and_metrics tests/unit/test_server_config_and_metrics.cpp)
+create_test_executable(test_pooled_session tests/unit/test_pooled_session.cpp)
+create_test_executable(test_pooled_session_integration tests/unit/test_pooled_session_integration.cpp)
+create_test_executable(demo_request_validator demos/demo_request_validator.cpp)
+create_test_executable(demo_response_builder_simple demos/demo_response_builder_simple.cpp)
+create_test_executable(demo_exception_mapper_integration demos/demo_exception_mapper_integration.cpp)
+create_test_executable(test_exception_mapper tests/unit/test_exception_mapper.cpp)
+create_test_executable(test_request_handler_refactored tests/unit/test_request_handler_refactored.cpp)
 if(ENABLE_TESTS AND JWT_CPP_FOUND)
-  create_test_executable(security_demo scripts/security_demo.cpp)
+  create_test_executable(security_demo demos/security_demo.cpp)
 endif()
-create_test_executable(load_test_advanced scripts/load_test_advanced.cpp)
+create_test_executable(load_test_advanced tests/performance/load_test_advanced.cpp)
 if(ENABLE_TESTS AND JWT_CPP_FOUND)
-  create_test_executable(test_jwt_auth scripts/test_jwt_auth.cpp)
+  create_test_executable(test_jwt_auth tests/unit/test_jwt_auth.cpp)
 endif()
 if(ENABLE_TESTS)
-  create_test_executable(test_lock_utils scripts/test_lock_utils.cpp)
-  create_test_executable(demo_lock_utils scripts/demo_lock_utils.cpp)
+  create_test_executable(test_lock_utils tests/unit/test_lock_utils.cpp)
+  create_test_executable(demo_lock_utils demos/demo_lock_utils.cpp)
 endif()
 
 # GTest-based targets
 if(GTest_FOUND AND ENABLE_TESTS)
-  create_test_executable(test_log_handler scripts/test_log_handler.cpp)
-  create_test_executable(test_log_file_manager scripts/test_log_file_manager.cpp)
+  create_test_executable(test_log_handler tests/unit/test_log_handler.cpp)
+  create_test_executable(test_log_file_manager tests/unit/test_log_file_manager.cpp)
   target_link_libraries(test_log_file_manager GTest::gtest GTest::gtest_main)
 
   # Concurrency benchmark
-  create_test_executable(test_concurrency_benchmark scripts/test_concurrency_benchmark.cpp)
+  create_test_executable(test_concurrency_benchmark tests/performance/test_concurrency_benchmark.cpp)
   target_link_libraries(test_concurrency_benchmark GTest::gtest GTest::gtest_main)
 
   # TimeoutManager unit tests
-  create_test_executable(test_timeout_manager scripts/test_timeout_manager.cpp)
+  create_test_executable(test_timeout_manager tests/unit/test_timeout_manager.cpp)
   target_link_libraries(test_timeout_manager GTest::gtest GTest::gtest_main)
 
   # ConnectionPoolManager unit tests
-  create_test_executable(test_connection_pool_manager_simple scripts/test_connection_pool_manager_simple.cpp)
+  create_test_executable(test_connection_pool_manager_simple tests/unit/test_connection_pool_manager_simple.cpp)
   target_link_libraries(test_connection_pool_manager_simple GTest::gtest GTest::gtest_main)
 
   # Real-time monitoring integration test (working version)
-  create_test_executable(test_real_time_monitoring_integration scripts/test_real_time_monitoring_integration.cpp)
+  create_test_executable(test_real_time_monitoring_integration tests/unit/test_real_time_monitoring_integration.cpp)
   target_link_libraries(test_real_time_monitoring_integration GTest::gtest GTest::gtest_main)
 
   # RequestValidator unit tests
